force-app/main/default/objects/Test_Plan__c/Test_Plan__c.object-meta.xml
<CustomObject>
    <label>Test Plan</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Plan No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>