force-app/main/default/objects/Test_Plan__c/fields/Actual_Num_of_Test_Runs__c.field-meta.xml
<CustomField>
    <fullName>Actual_Num_of_Test_Runs__c</fullName>
    <description># of Test Runs for this Test Plan</description>
    <label>Actual # of Test Runs</label>
    <summarizedField>Test_Cycle__c.Total_Test_Scenarios__c</summarizedField>
    <summaryForeignKey>Test_Cycle__c.Test_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>