force-app/main/default/objects/Test_Plan__c/fields/Actual_Pass_Rate__c.field-meta.xml
<CustomField>
    <fullName>Actual_Pass_Rate__c</fullName>
    <formula>IF( 
  Runs_Completed__c != 0,
  Runs_Passed__c / Runs_Completed__c,
  null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Of the tests to that have been executed for this Test Plan, what is the percentage of tests that have passed?</inlineHelpText>
    <label>Actual Pass Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>