force-app/main/default/objects/Test_Plan__c/fields/Actual_Run_Rate__c.field-meta.xml
<CustomField>
    <fullName>Actual_Run_Rate__c</fullName>
    <formula>IF(
  Runs_Completed__c != 0,
  Runs_Completed__c / Actual_Num_of_Test_Runs__c,
  null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Of the tests to that should be executed for this Test Plan, what is the percentage of tests that have been executed?</inlineHelpText>
    <label>Actual Run Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>