force-app/main/default/objects/Test_Plan__c/fields/Num_of_Passes__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Passes__c</fullName>
    <inlineHelpText>How many times are all the tests being run?</inlineHelpText>
    <label># of Passes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>