force-app/main/default/objects/Test_Plan__c/fields/Num_of_Roles__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Roles__c</fullName>
    <inlineHelpText>How many distinct end user roles are there for this project?</inlineHelpText>
    <label># of Roles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>