force-app/main/default/objects/Test_Plan__c/fields/Num_of_Teams__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Teams__c</fullName>
    <inlineHelpText>How many distinct teams are there? This will equal the number of distinct combinations of list views different groups of users should see.</inlineHelpText>
    <label># of Teams</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>