force-app/main/default/objects/Test_Plan__c/fields/Num_of_Test_Cases__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Test_Cases__c</fullName>
    <description>Test cases that cover updated components included in the release.</description>
    <inlineHelpText>Test cases that cover updated components included in the release.</inlineHelpText>
    <label># of Test Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>