force-app/main/default/objects/Test_Plan__c/fields/Pass_Rate__c.field-meta.xml
<CustomField>
    <fullName>Pass_Rate__c</fullName>
    <inlineHelpText>What is the mandatory pass rate in order to call the testing complete?</inlineHelpText>
    <label>Pass Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>