force-app/main/default/objects/Test_Plan__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
    <relationshipLabel>Test Plans</relationshipLabel>
    <relationshipName>Test_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>