force-app/main/default/objects/Test_Plan__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Test Plans</relationshipLabel>
    <relationshipName>Test_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>