force-app/main/default/objects/Test_Plan__c/fields/Run_Rate__c.field-meta.xml
<CustomField>
    <fullName>Run_Rate__c</fullName>
    <inlineHelpText>What is the mandatory run rate in order to call the testing complete?</inlineHelpText>
    <label>Run Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>