force-app/main/default/objects/Test_Plan__c/fields/Runs_Completed__c.field-meta.xml
<CustomField>
    <fullName>Runs_Completed__c</fullName>
    <description>Roll-up summary of total runs that have been executed across all Test Cycles</description>
    <label>Runs Completed</label>
    <summarizedField>Test_Cycle__c.Num_of_Test_Runs__c</summarizedField>
    <summaryForeignKey>Test_Cycle__c.Test_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>