force-app/main/default/objects/Test_Plan__c/fields/Runs_Passed__c.field-meta.xml
<CustomField>
    <fullName>Runs_Passed__c</fullName>
    <description>Roll-up summary of total runs that have passed on all child Test Cycles</description>
    <label>Runs Passed</label>
    <summarizedField>Test_Cycle__c.Num_of_Tests_Passed__c</summarizedField>
    <summaryForeignKey>Test_Cycle__c.Test_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>