force-app/main/default/objects/Test_Plan__c/fields/Test_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Test_Objectives__c</fullName>
    <inlineHelpText>What are the goals and objectives of this test plan?</inlineHelpText>
    <label>Test Objectives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>