force-app/main/default/objects/Test_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Test_Objectives__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>